ai-core-platform/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-core-platform
  namespace: ai-core-platform
  labels:
    app: ai-core-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-core-platform
  template:
    metadata:
      labels:
        app: ai-core-platform
    spec:
      serviceAccountName: ai-core-platform-sa
      containers:
        - name: ai-core-platform
          image: 194722419261.dkr.ecr.us-west-2.amazonaws.com/ai-core-platform/EDC_api:first # will change
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
